--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<ul>
 		<li><a href="lesson_one.html">Lesson One</a></li>
 		<li><a href="lesson_two.html">Lesson Two</a></li>
+		<li><a href="lesson_three.html">Lesson Three</a></li>
+		<li><a href="lesson_four.html">Lesson Four</a></li>
+		<li><a href="lesson_five.html">Lesson Five</a></li>
+		<li><a href="lesson_six.html">Lesson Six</a></li>
 	</ul>
 </body>
 
